# hookedin

./: .gitignore  LICENSE  README.md  pyproject.toml
src/hookedin/: __init__.py  hook_manager.py  reducers.py
tests/: hookedin_test.py
